--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+//            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -29,6 +30,13 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
+    implementation 'com.github.hotchemi:android-rate:1.0.1'
+    implementation 'io.github.tonnyl:whatsnew:0.1.1'
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation 'com.github.XunMengWinter:CircularAnim:0.4.6'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 }
